Render icons from material-icons ids

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -105,7 +105,11 @@
             </div>
 
             <div class="col-sm-auto text-end">
-              <p> {{ item.icons_html|safe }} </p>
+              <p>
+                {% for icon in item.icons %}
+                <span class="material-icons">{{ icon }}</span>
+                {% endfor %}
+              </p>
             </div>
           </div>
         </article>
@@ -126,7 +130,11 @@
             </div>
 
             <div class="col-sm-auto text-end">
-              <p> {{ item.icons_html|safe }} </p>
+              <p>
+                {% for icon in item.icons %}
+                <span class="material-icons">{{ icon }}</span>
+                {% endfor %}
+              </p>
             </div>
           </div>
         </article>
