--- a/webapp/events/templates/events/index.html
+++ b/webapp/events/templates/events/index.html
@@ -13,7 +13,7 @@
 
 <main>
 
-  <h1>Events</h1>
+  <h1>Galaxy Australia events</h1>
 
   <section class="container-fluid event-list">
     <div class="">
