--- a/webapp/home/static/home/css/landing.css
+++ b/webapp/home/static/home/css/landing.css
@@ -41,6 +41,7 @@
   border-left: .5rem solid var(--color);
   margin: 0;
   padding: .5rem 1rem;
+  cursor: pointer;
   transition-duration: .25s;
 }
 #news-events article:hover {
