--- a/webapp/home/templates/home/imports.html
+++ b/webapp/home/templates/home/imports.html
@@ -1,12 +1,8 @@
 {% load static %}
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<!--
-<link rel="stylesheet" href="https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Abook%3A">
-<link rel="stylesheet" href="https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Aconstruction%3A">
-<link rel="stylesheet" href="https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Astorage%3A">
--->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="{% static 'vendor/fontawesome-5.15.4/css/all.css' %}"/>
 <link rel="stylesheet" href="{% static 'home/css/main.css' %}">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
