--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -1,4 +1,4 @@
-{% extends 'home/header.html' %}
+{% extends landing|yesno:'home/header_landing.html,home/header.html' %}
 
 {% load static %}
 {% load markdownify %}
@@ -13,7 +13,9 @@
 
 <main>
   <section class="container-flex text-center my-3">
-    <img id="header-logo" src="{% static 'home/img/ga-logo.png' %}" alt="Galaxy Australia Logo">
+    <a href="https://usegalaxy.org.au">
+      <img id="header-logo" src="{% static 'home/img/ga-logo.png' %}" alt="Galaxy Australia Logo">
+    </a>
   </section>
 
   <section class="container-fluid my-5" id="tagline">
@@ -37,7 +39,7 @@
           <br>
           Galaxy tutorials
           <br>
-          available
+          available now
         </p>
         <a class="ga-btn" href="#">Start learning</a>
       </div>
@@ -98,52 +100,112 @@
 
   <section class="row no-gutter" id="news-events">
     <div class="col-sm-6 px-3" id="news">
-      <a href="#"><h4>News</h4></a>
+      <div class="row justify-content-between">
+        <div class="col">
+          <h4>News</h4>
+        </div>
+        <div class="col-md-auto">
+          <a class="ga-btn sm" href="/news">Browse</a>
+        </div>
+      </div>
       {% for item in news_items %}
-      <a href="{{ item.url }}">
-        <article>
-          <div class="row">
-            <div class="col">
-              <p> {{ item.datetime_created|date:"Y-m-d" }} </p>
-              <p><b> {{ item.title|markdownify }} </b></p>
-            </div>
+      <article class="row" onclick="window.location='{{ item.url }}';">
+        <div class="col">
+          <p> {{ item.datetime_created|date:"Y-m-d" }} </p>
+          <p><b> {{ item.title|markdownify }} </b></p>
+        </div>
 
-            <div class="col-sm-auto text-end">
-              <p>
-                {% for icon in item.material_icons %}
-                <span class="material-icons">{{ icon }}</span>
-                {% endfor %}
-              </p>
-            </div>
-          </div>
-        </article>
-      </a>
+        <div class="col-sm-auto text-end">
+          <p>
+            {% for icon in item.material_icons %}
+            <span class="material-icons">{{ icon }}</span>
+            {% endfor %}
+          </p>
+        </div>
+      </article>
       {% endfor %}
     </div>
 
     <div class="col-sm-6 px-3">
-      <a href="/events"><h4>Events and workshops</h4></a>
+      <div class="row justify-content-between">
+        <div class="col">
+          <h4>Events and workshops</h4>
+        </div>
+        <div class="col-md-auto">
+          <a class="ga-btn sm" href="/events">Browse</a>
+        </div>
+      </div>
       {% for item in events %}
-      <a href="{{ item.url }}">
-        <article>
-          <div class="row">
-            <div class="col">
-              <p> {{ item.datetime_created|date:"Y-m-d" }} </p>
-              <p><b> {{ item.title|markdownify }} </b></p>
-            </div>
+      <article class="row" onclick="window.location='{{ item.url }}';">
+        <div class="col">
+          <p> {{ item.datetime_created|date:"Y-m-d" }} </p>
+          <p><b> {{ item.title|markdownify }} </b></p>
+        </div>
 
-            <div class="col-sm-auto text-end">
-              <p>
-                {% for icon in item.material_icons %}
-                <span class="material-icons">{{ icon }}</span>
-                {% endfor %}
-              </p>
-            </div>
-          </div>
-        </article>
-      </a>
+        <div class="col-sm-auto text-end">
+          <p>
+            {% for icon in item.material_icons %}
+            <span class="material-icons">{{ icon }}</span>
+            {% endfor %}
+          </p>
+        </div>
+      </article>
       {% endfor %}
     </div>
+  </section>
+
+  <section id="data-policy">
+    <h4 class="header"> Our data policy </h4>
+
+    <h5> Registered users <span class="material-icons">account_circle</span> </h5>
+
+    <p>
+      User data on usegalaxy.org.au (i.e. datasets, histories) is stored for a
+      <b>minimum of 1 year</b> (52 weeks) unless deleted by the user. Datasets will be permanently removed within 5 days of deletion by the user. If
+      the user "purges" the dataset in the Galaxy, it will be removed immediately,
+      permanently.
+    </p>
+
+    <p>
+      Users are allocated a <b>100GB</b> disk quota upon registration. Users registratered
+      with an Australian research institute address are allocated <b>600GB</b>.
+    </p>
+
+    <p>
+      An extended quota can be
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiw6ajmkezLCwbXc3OFQEU3Ai9hGnBd967u9YbQ8ANPgvatA/viewform" target="_blank">
+        requested
+      </a>
+      for a limited time period in special cases.
+    </p>
+
+    <hr>
+
+    <h5> Unregistered users <span class="material-icons">no_accounts</span></h5>
+
+    <p>
+      Processed data will only be accessible during one browser session, using a
+      cookie to identify your data. This cookie is not used for any other purposes
+      (e.g. tracking or analytics.)
+    </p>
+
+    <p>
+      If the user does not access usegalaxy.org.au within 5 days, those datasets will be permanently deleted.
+    </p>
+
+    <br>
+
+    <p class="text-center">
+      <a class="ga-btn" href="/galaxy/data-policy.html">
+        Full data policy
+      </a>
+
+      <br>
+
+      <a class="ga-btn" href="https://galaxy-au-training.github.io/tutorials/modules/galaxy-data/">
+        Downloading and deleting my data
+      </a>
+    </p>
   </section>
 
 </main>
