Update link to data policy

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -196,7 +196,7 @@
     <br>
 
     <p class="text-center">
-      <a class="ga-btn" href="/galaxy/data-policy.html">
+      <a class="ga-btn" href="/data-policy.html">
         Full data policy
       </a>
 
