--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -39,9 +39,11 @@
           <br>
           Galaxy tutorials
           <br>
-          available now
+          Available now
         </p>
-        <a class="ga-btn" href="#">Start learning</a>
+        <a class="ga-btn" href="https://training.galaxyproject.org/" target="_blank">
+          Start learning
+        </a>
       </div>
     </div>
 
@@ -55,7 +57,9 @@
           <br>
           Ready to install
         </p>
-        <a class="ga-btn" href="#">Request now</a>
+        <a class="ga-btn" href="https://request.usegalaxy.org.au" target="_blank">
+          Request now
+        </a>
       </div>
     </div>
 
@@ -65,9 +69,11 @@
         <p class="m-0">
           Additional storage
           <br>
-          available on request
+          Available on request
         </p>
-        <a class="ga-btn" href="#">Request now</a>
+        <a class="ga-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeiw6ajmkezLCwbXc3OFQEU3Ai9hGnBd967u9YbQ8ANPgvatA/viewform" target="_blank">
+          Request now
+        </a>
       </div>
     </div>
   </section>
@@ -105,7 +111,7 @@
           <h4>News</h4>
         </div>
         <div class="col-md-auto">
-          <a class="ga-btn sm" href="/news">Browse</a>
+          <a class="ga-btn sm" href="/news">See all</a>
         </div>
       </div>
       {% for item in news_items %}
@@ -132,7 +138,7 @@
           <h4>Events and workshops</h4>
         </div>
         <div class="col-md-auto">
-          <a class="ga-btn sm" href="/events">Browse</a>
+          <a class="ga-btn sm" href="/events">See all</a>
         </div>
       </div>
       {% for item in events %}
