--- a/webapp/home/templates/home/pages/data-policy.html
+++ b/webapp/home/templates/home/pages/data-policy.html
@@ -9,7 +9,7 @@
   <br>
 
   <div class="container">
-    <p>
+    <p class="lead">
       <strong>Galaxy Australia</strong>
       is designed for data analysis and not for long term storage of data.
     </p>
