--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -60,7 +60,7 @@
     <div>
       <p>
         <i class="fab fa-twitter"></i>
-        <a href="https://twitter.com/galaxyaustradiva" target="_blank">galaxyaustralia</a>
+        <a href="https://twitter.com/galaxyaustradiva" target="_blank">@galaxyaustralia</a>
       </p>
     </div>
   </div>
