--- a/webapp/news/templates/news/news-item.html
+++ b/webapp/news/templates/news/news-item.html
@@ -1,10 +1,10 @@
-{% extends 'home/header.html' %}
+{% extends home/header.html %}
 
 {% load static %}
 
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'home/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/news.css' %}">
 {% endblock %}
 
 
