Style people page

--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -46,6 +46,13 @@
 
     <script type="text/javascript">
       $(document).ready( () => {
+
+        // Enable bootstrap tooltips
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+          return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+
         {% block onload %}
         {% endblock %}
       });
