--- a/webapp/home/static/home/css/main.css
+++ b/webapp/home/static/home/css/main.css
@@ -6,6 +6,7 @@
 body {
   color: #2C3143;
   padding: 6rem 2rem 1rem 2rem;
+  min-width: 99vw;
 }
 nav {
   color: #ddd;
@@ -44,6 +45,9 @@ main {
   margin: 0 auto;
   /* Push the footer down */
   min-height: calc(95vh - 180px - 7rem);
+}
+main.wide {
+  max-width: 1400px;
 }
 section {
   margin: 1rem 0;
@@ -132,4 +136,23 @@ h6.header {
   margin-bottom: 2rem;
   padding-bottom: .5rem;
   border-bottom: 1px solid var(--color);
+}
+
+/* Responsive */
+@media(max-width: 576px) {
+  body {
+    padding: 6rem .5rem 1rem .5rem;
+  }
+  footer {
+    margin-top: 2rem;
+  }
+  footer p {
+    margin-top: 2rem;
+  }
+  footer .contact-info {
+    font-size: .75rem;
+  }
+  .card-body {
+    padding: .2rem;
+  }
 }
