--- a/webapp/home/templates/home/snippets/imports.html
+++ b/webapp/home/templates/home/snippets/imports.html
@@ -5,5 +5,6 @@
 <link rel="stylesheet" href="{% static 'vendor/fontawesome-5.15.4/css/all.css' %}"/>
 <link rel="stylesheet" href="{% static 'home/css/main.css' %}">
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
