--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -13,7 +13,7 @@
 
 <main>
   <section class="container-flex text-center my-3">
-    <a href="https://usegalaxy.org.au">
+    <a {{ landing|yesno:",href=https://usegalaxy.org.au" }}>
       <img id="header-logo" src="{% static 'home/img/ga-logo.png' %}" alt="Galaxy Australia Logo">
     </a>
   </section>
