--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -20,7 +20,7 @@
       </a>
 
       <a href="https://www.qcif.edu.au/" target="_blank">
-        <img src="{% static 'logos/qcif.jpg' %}" />
+        <img src="{% static 'logos/qcif-bioinformatics.png' %}" />
       </a>
 
       <a href="https://www.dese.gov.au/ncris" target="_blank">
