--- a/webapp/news/templates/news/index.html
+++ b/webapp/news/templates/news/index.html
@@ -5,7 +5,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'home/css/events.css' %}">
+<link rel="stylesheet" href="{% static 'events/css/events.css' %}">
 {% endblock %}
 
 
