--- a/webapp/events/static/events/css/events.css
+++ b/webapp/events/static/events/css/events.css
@@ -1,3 +1,4 @@
+/* Actually applies to news and events */
 th, .table th {
   color: white;
   background-color: var(--color);
@@ -14,4 +15,8 @@ span.tag {
   width: auto;
   height: 50px;
   margin: 1rem 3rem;
+}
+.markdown img {
+  height: auto;
+  max-width: 300px;
 }
