--- a/webapp/events/templates/events/event.html
+++ b/webapp/events/templates/events/event.html
@@ -41,7 +41,7 @@
 
     <br><br>
 
-    <div class="container" id="event-body">
+    <div class="container markdown" id="event-body">
       {{ event.body|markdown|safe }}
     </div>
 
