--- a/webapp/people/templates/people/index.html
+++ b/webapp/people/templates/people/index.html
@@ -15,7 +15,7 @@
     <h1>The Galaxy Australia Team</h1>
 
     <p class="lead text-danger">
-      Blah blah creators/maintainers of Galaxy Australia
+      {% lorem 50 w %}
     </p>
 
     <hr>
