--- a/webapp/news/templates/news/article.html
+++ b/webapp/news/templates/news/article.html
@@ -55,7 +55,7 @@
 
     <br><br>
 
-    <div class="container" id="article-body">
+    <div class="container markdown" id="article-body">
       {{ article.body|markdown|safe }}
     </div>
 
