--- a/webapp/events/templates/events/index.html
+++ b/webapp/events/templates/events/index.html
@@ -48,7 +48,7 @@
             <tr>
               <td>
                 <a href="{{ item.url }}" {% if item.external %} target="_blank" {% endif %}>
-                  <h4> {{ item.title|markdown|safe }} </h4>
+                  <h4 class="markdown"> {{ item.title|markdown|safe }} </h4>
                 </a>
                 <div class="blurb markdown">
                   {{ item.blurb|markdown|safe }}
