--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -4,7 +4,7 @@
 {% load static %}
 
   <head>
-    {% include 'home/snippets/meta.html' %}
+    {% include 'home/snippets/head.html' %}
     <title> {% if title %}{{ title }}{% else %}Galaxy Australia{% endif %} </title>
     {% include 'home/snippets/imports.html' %}
 
@@ -73,7 +73,7 @@
         {% if not user.is_authenticated %}
         <a
           href="/admin"
-          data-bs-toggle="tooltip" 
+          data-bs-toggle="tooltip"
           data-bs-placement="bottom"
           title="Admin login"
           id="admin-login"
